# spotify_to_tidal

./: .gitignore  .pre-commit-config.yaml  LICENSE  auth.py  clear_tidal_account.py  example_config.yml  pyproject.toml  pytest.ini  readme.md  requirements.txt  sync.py  tidalapi_patch.py
.circleci/: config.yml
src/: __init__.py  __main__.py  auth.py  filters.py  sync.py  tidalapi_patch.py
src/spotify-to-tidal/: __main__.py  auth.py  sync.py  tidalapi_patch.py
src/spotify-to-tidal/type/: __init__.py  config.py
src/spotify_to_tidal/: __init__.py  __main__.py  auth.py  cache.py  database.py  filters.py  parse.py  search.py  sync.py  tidalapi_patch.py
src/spotify_to_tidal/type/: __init__.py  config.py  playlist.py  spotify.py
src/types/: __init__.py  config.py  playlist.py  spotify.py
tests/: conftest.py
tests/unit/: test_album_sync.py  test_artist_sync.py  test_auth.py  test_cache.py  test_consolidated_logging.py  test_simple_function.py  test_sync.py  test_sync_artists.py
